Correcciones de redireccionamiento y estilos

--- a/src/views/components/menu.ejs
+++ b/src/views/components/menu.ejs
@@ -14,14 +14,13 @@
             </button>
             <div id="admin-dropdown"
                 style="display: none; flex-direction: column; background-color: #4961E4; height: auto; width: 100%;">
-                <a href="/" class="btn btn-secondary text-start text-light text-decoration-none">Logs de seguridad</a>
-                <a href="/" class="btn btn-secondary text-start text-light text-decoration-none">Configuración de logs</a>
+                <a href="#" class="btn btn-secondary text-start text-light text-decoration-none">Logs de seguridad</a>
+                <a href="#" class="btn btn-secondary text-start text-light text-decoration-none">Configuración de
+                    logs</a>
             </div>
 
             <!-- Grupos Dropdown -->
-            <button class="btn btn-primary d-flex align-items-center justify-content-between mt-2" id="groups-button">
-                <a href="/" class="text-start text-light text-decoration-none">Grupos</a>
-            </button>
+            <a href="/#" class=" btn btn-primary d-flex align-items-center justify-content-between mt-2 text-start text-light text-decoration-none">Grupos</a>
 
             <!-- Accesos Dropdown -->
             <button class="btn btn-primary d-flex align-items-center justify-content-between mt-2" id="access-button">
@@ -30,14 +29,14 @@
             </button>
             <div id="access-dropdown"
                 style="display: none; flex-direction: column; background-color: #4961E4; height: auto; width: 100%;">
-                <a href="/" class="btn btn-secondary text-start text-light text-decoration-none">Intentos de acceso</a>
-                <a href="/" class="btn btn-secondary text-start text-light text-decoration-none">Configuración de acceso</a>
+                <a href="#" class="btn btn-secondary text-start text-light text-decoration-none">Intentos de acceso</a>
+                <a href="#" class="btn btn-secondary text-start text-light text-decoration-none">Configuración de
+                    acceso</a>
             </div>
 
             <!-- Modulos Dropdown -->
-            <button class="btn btn-primary d-flex align-items-center justify-content-between mt-2" id="groups-button">
-                <a href="/" class="text-start text-light text-decoration-none">Módulos</a>
-            </button>
+            <a href="#" class=" btn btn-primary d-flex align-items-center justify-content-between mt-2 text-start text-light text-decoration-none">Módulos</a>
+
 
             <!-- Usuarios Dropdown -->
             <button class="btn btn-primary d-flex align-items-center justify-content-between mt-2" id="users-button">
@@ -46,16 +45,17 @@
             </button>
             <div id="users-dropdown"
                 style="display: none; flex-direction: column; background-color: #4961E4; height: auto; width: 100%;">
-                <a href="/" class="btn btn-secondary text-start text-light text-decoration-none">Listado de usuarios</a>
-                <a href="/" class="btn btn-secondary text-start text-light text-decoration-none">Registros de usuarios</a>
-                <a href="/bloqueos" class="btn btn-secondary text-start text-light text-decoration-none">Cuentas bloqueadas</a>
-                <a href="/panel" class="btn btn-secondary text-start text-light text-decoration-none">Panel de control</a>
+                <a href="#" class="btn btn-secondary text-start text-light text-decoration-none">Listado de usuarios</a>
+                <a href="#" class="btn btn-secondary text-start text-light text-decoration-none">Registros de
+                    usuarios</a>
+                <a href="/bloqueos" class="btn btn-secondary text-start text-light text-decoration-none">Cuentas
+                    bloqueadas</a>
+                <a href="/panel" class="btn btn-secondary text-start text-light text-decoration-none">Panel de
+                    control</a>
             </div>
 
             <!-- Informes Dropdown -->
-            <button class="btn btn-primary d-flex align-items-center justify-content-between mt-2" id="reports-button">
-                <a href="/" class="text-start text-light text-decoration-none">Informes</a>
-            </button>
+            <a href="/informeActividad" class=" btn btn-primary d-flex align-items-center justify-content-between mt-2 text-start text-light text-decoration-none">Informes</a>
 
             <!-- Seguridad Dropdown -->
             <button class="btn btn-primary d-flex align-items-center justify-content-between mt-2" id="records-button">
@@ -64,17 +64,24 @@
             </button>
             <div id="records-dropdown"
                 style="display: none; flex-direction: column; background-color: #4961E4; height: 100%; width: 100%;">
-                <a href="/" class="btn btn-secondary text-start text-light text-decoration-none">Panel de seguridad</a>
-                <a href="/" class="btn btn-secondary text-start text-light text-decoration-none">Copias de seguridad</a>
-                <a href="/" class="btn btn-secondary text-start text-light text-decoration-none">Exportación de datos</a>
-                <a href="/dis" class="btn btn-secondary text-start text-light text-decoration-none">Inicios de sesión</a>
-                <a href="/" class="btn btn-secondary text-start text-light text-decoration-none">Detección</a>
-                <a href="/" class="btn btn-secondary text-start text-light text-decoration-none">Monitoreo</a>
-                <a href="/" class="btn btn-secondary text-start text-light text-decoration-none">Autenticación de dos factores</a>
-                <a href="/" class="btn btn-secondary text-start text-light text-decoration-none">Ajustes de cuenta</a>
-                <a href="/config" class="btn btn-secondary text-start text-light text-decoration-none">Configuración del sistema</a>
-                <a href="/preguntas" class="btn btn-secondary text-start text-light text-decoration-none">Preguntas de Seguridad</a>
-                <a href="/" class="btn btn-secondary text-start text-light text-decoration-none">Encriptación de contraseñas</a>
+                <a href="#" class="btn btn-secondary text-start text-light text-decoration-none">Panel de seguridad</a>
+                <a href="#" class="btn btn-secondary text-start text-light text-decoration-none">Copias de seguridad</a>
+                <a href="#" class="btn btn-secondary text-start text-light text-decoration-none">Exportación de
+                    datos</a>
+                <a href="/sesiones" class="btn btn-secondary text-start text-light text-decoration-none">Inicios de
+                    sesión</a>
+                <a href="#" class="btn btn-secondary text-start text-light text-decoration-none">Detección</a>
+                <a href="/historialc" class="btn btn-secondary text-start text-light text-decoration-none">Monitoreo</a>
+                <a href="/verificacionDoble1"
+                    class="btn btn-secondary text-start text-light text-decoration-none">Autenticación de dos
+                    factores</a>
+                <a href="#" class="btn btn-secondary text-start text-light text-decoration-none">Ajustes de cuenta</a>
+                <a href="/config" class="btn btn-secondary text-start text-light text-decoration-none">Configuración del
+                    sistema</a>
+                <a href="/complejidadPreguntas" class="btn btn-secondary text-start text-light text-decoration-none">Preguntas de
+                    Seguridad</a>
+                <a href="#" class="btn btn-secondary text-start text-light text-decoration-none">Encriptación de
+                    contraseñas</a>
             </div>
         </div>
     </div>
