--- a/src/views/views.perfil.ejs
+++ b/src/views/views.perfil.ejs
@@ -61,8 +61,8 @@
                     
                 <div class="perfil__btn">
                     <div class="arriba">
-                        <button class="btna btn--azul">Cambiar Contraseña</button>
-                        <button class="btna btn--rojo">Eliminar Cuenta</button>
+                        <a href="/contrasena" class="btna btn btn--azul">Cambiar Contraseña</a>
+                        <a href="/eliminacionCuenta" class="btna btn btn--rojo">Eliminar Cuenta</a>
                     </div>
                     <div class="abajo">
                         <button class="btna btn--gris" id="btna">
