--- a/src/public/css/perfil.css
+++ b/src/public/css/perfil.css
@@ -72,6 +72,7 @@ nav{
 }
 /* botnores */
 .btna{
+    text-decoration: none;
     width: 300px;
     height: 40px;
     cursor: pointer;
@@ -79,6 +80,11 @@ nav{
     border: none;
     color: white;
     
+}
+
+.btn{
+    width: 300px;
+    height: 40px;
 }
 .bta{
     width: 150px;
