Una ruta más para el menu

--- a/src/views/components/menu.ejs
+++ b/src/views/components/menu.ejs
@@ -20,7 +20,7 @@
             </div>
 
             <!-- Grupos Dropdown -->
-            <a href="/#" class=" btn btn-primary d-flex align-items-center justify-content-between mt-2 text-start text-light text-decoration-none">Grupos</a>
+            <a href="/grupos" class=" btn btn-primary d-flex align-items-center justify-content-between mt-2 text-start text-light text-decoration-none">Grupos</a>
 
             <!-- Accesos Dropdown -->
             <button class="btn btn-primary d-flex align-items-center justify-content-between mt-2" id="access-button">
