--- a/src/views/views.registro.ejs
+++ b/src/views/views.registro.ejs
@@ -6,21 +6,32 @@
     <link rel="stylesheet" href="/css/politicas.css">
     <title>Login</title>
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+    <!-- SweetAlert2 -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <style>
+        /* Asegura que SweetAlert2 se muestra sobre otros elementos */
+        .swal2-container {
+            z-index: 9999 !important; /* Ajusta el valor si es necesario */
+        }
+    </style>
 </head>
 <body>
     <div class="caja_segundaria">
         <div class="fondo"></div>
         <div class="formulario">
             <h1>REGISTRO</h1>
-            <input type="text" placeholder="Nombre Completo" class="nombre">
-            <input type="text" placeholder="Nombre Completo" class="usuario">
-            <input type="email" placeholder="Correo Electronico" class="correo">
-            <input type="password" placeholder="Contraseña" class="contrasena">
-            <input type="password" placeholder="Confirmar Contraseña" class="confirmar">
-            <select name="rol" id="listarol" placeholder="Seleccione un rol">
+            <input type="text" placeholder="Nombre Completo" class="nombre" required>
+            <input type="text" placeholder="Nombre Completo" class="usuario" required>
+            <input type="email" placeholder="Correo Electronico" class="correo" required>
+            <input type="password" placeholder="Contraseña" class="contrasena" required>
+            <input type="password" placeholder="Confirmar Contraseña" class="confirmar" required>
+            <select name="rol" id="listarol" placeholder="Seleccione un rol" required>
                 <option selected disabled>Seleccione un rol: </option>
                 <option value="Administrador">Administrador</option>
-                <option value="Programador">Programador</option>
+                <option value="Programador">Invitado</option>
+                <option value="Programador">Moderador</option>
+                
             </select>
             
             <div class="consentimiento">
@@ -36,6 +47,6 @@
             <input class="boton" type="submit" value="Continuar">
         </div>
     </div>
+    <script src="/js/usuarios.js"></script>
 </body>
-<script src="/js/usuarios.js"></script>
 </html>
