--- a/src/views/views.grupos.ejs
+++ b/src/views/views.grupos.ejs
@@ -6,6 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="/css/panel.css">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <title>Apex</title>
 </head>
 <body>
@@ -25,11 +26,30 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12">
-                    <div class="txt ms-1">
-                        <p>No hay grupos</p>
+                <% if (grupos.body && grupos.body.length > 0) { %>
+                    <table class="table table-striped">
+                        <thead>
+                            <tr>
+                                <th style="background-color: #1E3DEA; color: white;" scope="col">ID</th>
+                                <th style="background-color: #1E3DEA; color: white;" scope="col">Nombre</th>
+                                <th style="background-color: #1E3DEA; color: white;" scope="col">Descripción</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <% grupos.body.forEach(grupo => { %>
+                                <tr>
+                                    <td><%= grupo.id %></td>
+                                    <td><%= grupo.nombre %></td>
+                                    <td><%= grupo.descripcion %></td>
+                                </tr>
+                            <% }) %>
+                        </tbody>
+                    </table>
+                <% } else { %>
+                    <div class="alert alert-warning">
+                        No hay grupos disponibles.
                     </div>
-                </div>
+                <% } %>
             </div>
         </div>
     </div>
