--- a/src/views/views.registro.ejs
+++ b/src/views/views.registro.ejs
@@ -22,18 +22,17 @@
         <div class="formulario">
             <h1>REGISTRO</h1>
             <input type="text" placeholder="Nombre Completo" class="nombre" required>
-            <input type="text" placeholder="Nombre Completo" class="usuario" required>
+            <input type="text" placeholder="Nombre de usuario" class="usuario" required>
             <input type="email" placeholder="Correo Electronico" class="correo" required>
             <input type="password" placeholder="Contraseña" class="contrasena" required>
             <input type="password" placeholder="Confirmar Contraseña" class="confirmar" required>
             <select name="rol" id="listarol" placeholder="Seleccione un rol" required>
                 <option selected disabled>Seleccione un rol: </option>
-                <option value="Administrador">Administrador</option>
-                <option value="Programador">Invitado</option>
-                <option value="Programador">Moderador</option>
-                
-            </select>
-            
+                <option value="1">Administrador</option>
+                <option value="2">Invitado</option>
+                <option value="3">Moderador</option>
+                <option value="4">Usuario</option>
+            </select>            
             <div class="consentimiento">
                 <input type="checkbox" id="consentimiento_datos" required>
                 <label for="consentimiento_datos">
