solucion politica seguridad: columnas borradas

--- a/src/views/views.condicionesc.ejs
+++ b/src/views/views.condicionesc.ejs
@@ -18,11 +18,11 @@
                     <div class="d-flex mt-3">
                         <input type="number" class="form-control me-2" placeholder="1" id="tiempoT" style="width: 10%;" value="">
                         <select class="form-select" id="medidaT" style="width: 10%;">
-                            <option value="m"  >>Minutos</option>
-                            <option value="h" >>Horas</option>
+                            <option value="m"  >Minutos</option>
+                            <option value="h" >Horas</option>
                             <option value="d">Días</option>
                             <option value="w" >Semanas</option>
-                            <option value="y" >>Años</option>
+                            <option value="y" >Años</option>
                         </select>
                     </div>
 
@@ -63,9 +63,6 @@
                         
                             <select class="form-select mt-3" id="frecuenciaCS" style="width: 10%;">
                                 <option value="Diaria" >Dias</option>
-                                <option value="Semanal">Semanas</option>
-                                <option value="Mensual">Meses</option>
-                                <option value="Anual">Años</option>
                             </select>
                         
                     </div>
