Funciona la un fecth de la vista CondicionesC

--- a/src/views/views.condicionesc.ejs
+++ b/src/views/views.condicionesc.ejs
@@ -55,7 +55,7 @@
                     </div>
                     <div class="col d-flex">
                         <div class="mt-4">Cantidades Especiales</div>
-                        <input type="text" class="mt-3 t1 px-3 rounded border-0 mx-3" placeholder="1" id="cantEsp">
+                        <input type="text" class="mt-3 t1 px-3 rounded border-0 mx-3" placeholder="1" id="cantEspe">
                     </div>
                     <div class="col d-flex">
                         <div class="mt-4">Intervalos de cambios de contraseña</div>
@@ -69,9 +69,9 @@
                             </select>
                         
                     </div>
-                    <div class="col d-flex">
+                    <!-- <div class="col d-flex">
                         <div class="mt-4">Duracion de Contraseña</div>   
-                        <input type="text" class="mt-3 t1 px-3 rounded border-0 mx-3" placeholder="Cantidad" id="cantEsp">
+                        <input type="text" class="mt-3 t1 px-3 rounded border-0 mx-3" placeholder="Cantidad" id="cantEspu">
                             <select class="form-select mt-3" id="frecuenciaCS" style="width: 10%;">
                                 <option value="Diaria" >Dias</option>
                                 <option value="Semanal">Semanas</option>
@@ -79,7 +79,7 @@
                                 <option value="Anual">Años</option>
                             </select>
                         
-                    </div>
+                    </div> -->
                 </div>
 
                 <div class="d-flex-end mt-5">
