Funciona completamente la vista complejidad preguntas

--- a/src/views/views.condicionesc.ejs
+++ b/src/views/views.condicionesc.ejs
@@ -55,11 +55,11 @@
                     </div>
                     <div class="col d-flex">
                         <div class="mt-4">Cantidades Especiales</div>
-                        <input type="text" class="mt-3 t1 px-3 rounded border-0 mx-3" placeholder="1" id="cantEspe">
+                        <input type="text" class="mt-3 t1 px-3 rounded border-0 mx-3" placeholder="1" id="cantEsp">
                     </div>
                     <div class="col d-flex">
                         <div class="mt-4">Intervalos de cambios de contraseña</div>
-                        <input type="text" class="mt-3 t1 px-3 rounded border-0 mx-3" placeholder="1" id="cantEsp">
+                        <input type="text" class="mt-3 t1 px-3 rounded border-0 mx-3" placeholder="1" id="intervaloCam">
                         
                             <select class="form-select mt-3" id="frecuenciaCS" style="width: 10%;">
                                 <option value="Diaria" >Dias</option>
