Configuracion de logs frontend listo

--- a/src/views/components/menu.ejs
+++ b/src/views/components/menu.ejs
@@ -14,9 +14,8 @@
             </button>
             <div id="admin-dropdown"
                 style="display: none; flex-direction: column; background-color: #4961E4; height: auto; width: 100%;">
-                <a href="#" class="btn btn-secondary text-start text-light text-decoration-none">Logs de seguridad</a>
-                <a href="#" class="btn btn-secondary text-start text-light text-decoration-none">Configuración de
-                    logs</a>
+                <a href="/comlogs" class="btn btn-secondary text-start text-light text-decoration-none">Configuración de
+                    logs de seguridad</a>
             </div>
 
             <!-- Grupos Dropdown -->
