--- a/src/views/views.comlogs.ejs
+++ b/src/views/views.comlogs.ejs
@@ -26,8 +26,8 @@
                                 </div>
                                 <div class="form-check form-switch mb-3">
                                     <input class="form-check-input" type="checkbox" id="toggleLoginAlert" checked>
-                                    <label class="form-check-label" for="toggleLoginAlert">Alerta de Inicio de Sección</label>
-                                    <p class="small text-muted">Alerta de Intentos de Inicio de Sección Fallido</p>
+                                    <label class="form-check-label" for="toggleLoginAlert">Alerta de Inicio de Sesion</label>
+                                    <p class="small text-muted">Alerta de Intentos de Inicio de Sesion Fallido</p>
                                 </div>
                                 <div class="form-check form-switch mb-3">
                                     <input class="form-check-input" type="checkbox" id="toggleUserLogs" checked>
