--- a/src/views/views.complejidad.preguntas.ejs
+++ b/src/views/views.complejidad.preguntas.ejs
@@ -147,15 +147,15 @@
                     <p>Aqui puedes definir las propiedades de las preguntas de seguridad</p>
                     <div class="caja2">
                         <p>Caracteres maximos permitidos en la pregunta de seguridad:</p>
-                        <input type="number" name="" id="">
+                        <input type="number" name="" id="caracteresP">
                         <P>Caracteres maximos permitidos en la respuesta:</P>
-                        <input type="number" name="" id="">
+                        <input type="number" name="" id="caracteresR">
                         <p>Cantidad de preguntas permitidad:</p>
-                        <input type="number" name="" id="">
+                        <input type="number" name="" id="cantP">
 
                         <div class="caja_btn">
                             <button class="boton btn--red">Cancelar</button>
-                            <button class="boton btn--blue">Guardar</button>
+                            <button class="boton btn--blue" id="btnG">Guardar</button>
                         </div>
                     </div>
 
@@ -167,16 +167,8 @@
     </div>
 
     </div>
-    <script>
-        document.querySelectorAll('.btn-primary').forEach(button => {
-            button.addEventListener('click', () => {
-                const dropdownId = button.id.replace('button', 'dropdown');
-                const dropdown = document.getElementById(dropdownId);
-                dropdown.style.display = dropdown.style.display === 'none' ? 'flex' : 'none';
-            });
-        });
 
-    </script>
+    <script src="js/complejidad.preguntas.js"></script>
     <script src="/js/botones.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.3/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
