feat: Tiempo de inactividad

--- a/src/views/components/menu.ejs
+++ b/src/views/components/menu.ejs
@@ -62,6 +62,9 @@
                 <span class="text-start">Seguridad</span>
                 <img class="dropdown-arrow" src="/img/angulo-hacia-abajo 1.png" alt="">
             </button>
+            <button class="btn btn-primary d-flex align-items-center justify-content-between mt-2" id="cerrarSesion">
+                <span class="text-start">Cerrar Sesion</span>
+            </button>
             <div id="records-dropdown"
                 style="display: none; flex-direction: column; background-color: #4961E4; height: 100%; width: 100%;">
                 <a href="/" class="btn btn-secondary text-start text-light text-decoration-none">Panel de seguridad</a>
@@ -91,3 +94,4 @@
     </div>
 </div>
 <script src="/js/dropdown-panel.js"></script>
+<script src="/js/inactividad.js"></script>
