--- a/src/views/views.registroSesión.ejs
+++ b/src/views/views.registroSesión.ejs
@@ -33,19 +33,19 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <% registros.body.forEach(function(registro) { %>
-                        <tr class="bg-light">
-                            <td><%= registro.direccion_ip %></td>
-                            <td><%= registro.dispositivo %></td>
-                            <td>Opera</td>
-                            <td>Brasil</td>
-                            <td><%= new Date(registro.fecha_inicio_sesion).toLocaleDateString() %></td>
-                            <td><%= new Date(registro.fecha_inicio_sesion).toLocaleTimeString() %></td>
-                        </tr>
-                        <% }) %>
-                        <!-- Filas vacías para mantener el diseño similar -->
-                        <% for (let i = registros.body.length; i < 5; i++) { %>
-                        <tr class="bg-light"><td colspan="5"></td></tr>
+                        <% datos.forEach(function(registro) { %>
+                            <tr class="bg-light">
+                                <td><%= registro.direccion_ip %></td>
+                                <td><%= registro.dispositivo %></td>
+                                <td>Opera</td>
+                                <td>Brasil</td>
+                                <td><%= new Date(registro.fecha_inicio_sesion).toLocaleDateString() %></td>
+                                <td><%= new Date(registro.fecha_inicio_sesion).toLocaleTimeString() %></td>
+                            </tr>
+                            <% }) %>
+                            <!-- Filas vacías para mantener el diseño similar -->
+                            <% for (let i = registros.body.length; i < 5; i++) { %>
+                            <tr class="bg-light"><td colspan="5"></td></tr>
                         <% } %>
                     </tbody>
                 </table>
