feat: Configuración de detalle de logs

--- a/src/views/components/menu.ejs
+++ b/src/views/components/menu.ejs
@@ -7,17 +7,6 @@
         </div>
         <div class="d-flex flex-column align-items-center justify-content-center mt-5">
 
-            <!-- Logs Dropdown -->
-            <button class="btn btn-primary d-flex align-items-center justify-content-between mt-2" id="admin-button">
-                <span class="text-start">Logs</span>
-                <img class="dropdown-arrow" src="/img/angulo-hacia-abajo 1.png" alt="">
-            </button>
-            <div id="admin-dropdown"
-                style="display: none; flex-direction: column; background-color: #4961E4; height: auto; width: 100%;">
-                <a href="/comlogs" class="btn btn-secondary text-start text-light text-decoration-none">Configuración de
-                    logs de seguridad</a>
-            </div>
-
             <!-- Grupos Dropdown -->
             <a href="/#" class=" btn btn-primary d-flex align-items-center justify-content-between mt-2 text-start text-light text-decoration-none">Grupos</a>
 
@@ -81,6 +70,7 @@
                     Seguridad</a>
                 <a href="#" class="btn btn-secondary text-start text-light text-decoration-none">Encriptación de
                     contraseñas</a>
+                <a href="/comlogs" class="btn btn-secondary text-start text-light text-decoration-none">Configuración de logs de seguridad</a>
             </div>
         </div>
     </div>
