--- a/src/views/views.panel.ejs
+++ b/src/views/views.panel.ejs
@@ -204,6 +204,18 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="permission-item">
+                            <label for="option7">Exportar datos de usuario</label>
+                            <div class="switch-container">
+                                <div class="switch">
+                                    <input type="checkbox" id="option7" class="switch-input">
+                                    <label for="option7" class="switch-label">
+                                        <div class="switch-slider"></div>
+                                    </label>
+                                </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="modal-footer">
